atualização das dashboards para cada card

--- a/webdatavizeprojgrupo/web-data-viz/public/dashboard.html
+++ b/webdatavizeprojgrupo/web-data-viz/public/dashboard.html
@@ -28,7 +28,7 @@
       <div class="son">
         <div class="card">
           <h3>Barril 1</h3>
-          <a href="../integraArduinoide/index.html">
+          <a href="./index1.html">
             <img src="imgs/barril-vermelho.svg" alt="Barril 1">
           </a>
           <div id="barril1">
@@ -39,63 +39,63 @@
         </div>
         <div class="card">
           <h3>Barril 2</h3>
-          <a href="../integraArduinoide/index.html">
+          <a href="./index2.html">
             <img src="imgs/barril-vermelho.svg" alt="Barril 2">
           </a>
           <div id="barril2"></div>
         </div>
         <div class="card">
           <h3>Barril 3</h3>
-          <a href="../integraArduinoide/index.html">
+          <a href="./index3.html">
             <img src="imgs/barril-vermelho.svg" alt="Barril 3">
           </a>
           <div id="barril3"></div>
         </div>
         <div class="card">
           <h3>Barril 4</h3>
-          <a href="../integraArduinoide/index.html">
+          <a href="./index4.html">
             <img src="imgs/barril-amarelo.svg" alt="Barril 4">
           </a>
           <div id="barril4"></div> <!-- Corrigido aqui -->
         </div>
         <div class="card">
           <h3>Barril 5</h3>
-          <a href="../integraArduinoide/index.html">
+          <a href="./index5.html">
             <img src="imgs/barril-amarelo.svg" alt="Barril 5">
           </a>
           <div id="barril5"></div>
         </div>
         <div class="card">
           <h3>Barril 6</h3>
-          <a href="../integraArduinoide/index.html">
+          <a href="./index6.html">
             <img src="imgs/barril-amarelo.svg" alt="Barril 6">
           </a>
           <div id="barril6"></div>
         </div>
         <div class="card">
           <h3>Barril 7</h3>
-          <a href="../integraArduinoide/index.html">
+          <a href="./index7.html">
             <img src="imgs/barril-verde.svg" alt="Barril 7">
           </a>
           <div id="barril7"></div>
         </div>
         <div class="card">
           <h3>Barril 8</h3>
-          <a href="../integraArduinoide/index.html">
+          <a href="./index8.html">
             <img src="imgs/barril-verde.svg" alt="Barril 8">
           </a>
           <div id="barril8"></div>
         </div>
         <div class="card">
           <h3>Barril 9</h3>
-          <a href="../integraArduinoide/index.html">
+          <a href="./index9.html">
             <img src="imgs/barril-verde.svg" alt="Barril 9">
           </a>
           <div id="barril9"></div>
         </div>
         <div class="card">
           <h3>Barril 10</h3>
-          <a href="../integraArduinoide/index.html">
+          <a href="./index10.html">
             <img src="imgs/barril-verde.svg" alt="Barril 10">
           </a>
           <div id="barril10"></div>
