--- a/webdatavizeprojgrupo/web-data-viz/public/index4.html
+++ b/webdatavizeprojgrupo/web-data-viz/public/index4.html
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src="http://www.chartjs.org/dist/2.7.1/Chart.js"></script>
     <script src="http://www.chartjs.org/samples/latest/utils.js"></script>
-    <link rel="stylesheet" href="styledassreal.css">
+    <link rel="stylesheet" href="./css/styledassreal.css">
     <style>
         canvas {
             -moz-user-select: none;
@@ -21,13 +21,13 @@
   
     <div class="pai">
         <div class="header">
-          <a href="/Site_institucional/winetemp.html"><img src="logo.png" alt="Logo" class="logo"></a>
+          <a href="/Site_institucional/winetemp.html"><img src="./imgs/Logo.png" alt="Logo" class="logo"></a>
           <div class="container1">
             <ul class="navbar">
-              <li><a href="..\Site_institucional\dashboard.html">Geral</a></li>
+              <li><a href="./dashboard.html">Geral</a></li>
     
               <li>|</li>
-              <li><a href="..\Site_institucional\Login.html">Sair</a></li>
+              <li><a href="./Login.html">Sair</a></li>
             </ul>
           </div>
         </div>
@@ -44,7 +44,7 @@
         </div>
         
         <div class="card-item-1">
-              <h2>Umidade - Barril 1</h2>
+              <h2>Umidade - Barril 4</h2>
               <div class="tela">
         <section style="width:100%">
             <canvas id="dht11Umidade"></canvas>
@@ -53,7 +53,7 @@
         </div>
 
         <div class="card-item-1">
-            <h2>Temperatura - Barril 1</h2>
+            <h2>Temperatura - Barril 4</h2>
             <div class="tela">
                 <section style="width: 100%;">
                     <canvas id="dht11Temperatura"></canvas>
