--- a/webdatavizeprojgrupo/web-data-viz/public/Cadastro.html
+++ b/webdatavizeprojgrupo/web-data-viz/public/Cadastro.html
@@ -18,12 +18,7 @@
         <canvas></canvas>
     </div>
 
-    <div class="voltar">
-
-        <a href="index.html"><img src="imgs/voltar.png" class="img2"></a>
-
-    </div>
-
+    
     <div class="alerta_erro">
       <div class="card_erro" id="cardErro">
         <span id="mensagem_erro"></span>
@@ -31,6 +26,13 @@
     </div>
 
     <div class="pai">
+
+      <div class="voltar">
+
+        <a href="index.html"><img src="imgs/voltar.png" class="img2"></a>
+
+    </div>
+
 
         <h1>Crie sua conta</h1>
 
@@ -213,4 +215,13 @@ function validarEmail(email) {
   function sumirMensagem() {
     cardErro.style.display = "none";
   }
+
+  function mostrarsenha() {
+        const senhaInput = document.getElementById('senha_input');
+        if (senhaInput.type === "password") {
+            senhaInput.type = "text";
+        } else {
+            senhaInput.type = "password";
+        }
+    }
 </script>
