--- a/webdatavizeprojgrupo/web-data-viz/public/loginBobia.html
+++ b/webdatavizeprojgrupo/web-data-viz/public/loginBobia.html
@@ -150,6 +150,15 @@
 
     function sumirMensagem() {
         cardErro.style.display = "none"
+
+    }
+    function mostrarsenha() {
+        const senhaInput = document.getElementById('senha_input');
+        if (senhaInput.type === "password") {
+            senhaInput.type = "text";
+        } else {
+            senhaInput.type = "password";
+        }
     }
 
 </script>
